# deep_learning_explorations

./: .gitignore  README.md  pyproject.toml
deep_learning_explorations/: __main__.py  manim.cfg  simple_nn.py  visualize.py
media/videos/1080p60/partial_movie_files/NetworkVisualization/: partial_movie_file_list.txt
